Print out the number of unique values for each column and the total number of columns

--- a/AmesHousingPrices.Rmd
+++ b/AmesHousingPrices.Rmd
@@ -24,7 +24,8 @@ miss_var_summary(AmesHouesingDataFrame)
 ```
 
 ```{r}
-
+apply(AmesHouesingDataFrame, 2, function(x) length(unique(x)))
+ncol(AmesHouesingDataFrame)
 ```
 
 ```{r}
