--- a/AmesHousingPrices.Rmd
+++ b/AmesHousingPrices.Rmd
@@ -29,6 +29,19 @@ miss_var_summary(AmesHouesingDataFrame)
 
 ```{r}
 AmesHouesingDataFrame$LogSalePrice = log(AmesHouesingDataFrame$SalePrice)
+
+# Add 1 to all deck/porch square footage so a log transformation works (log(1) = 0)
+AmesHouesingDataFrame$WoodDeckSF = AmesHouesingDataFrame$WoodDeckSF + 1
+AmesHouesingDataFrame$OpenPorchSF = AmesHouesingDataFrame$OpenPorchSF + 1
+AmesHouesingDataFrame$X3SsnPorch = AmesHouesingDataFrame$X3SsnPorch + 1
+AmesHouesingDataFrame$ScreenPorch = AmesHouesingDataFrame$ScreenPorch + 1
+
+# Create log transformation column for the various porch square foot columns
+AmesHouesingDataFrame$LogWoodDeckSF = log(AmesHouesingDataFrame$WoodDeckSF)
+AmesHouesingDataFrame$LogOpenPorchSF = log(AmesHouesingDataFrame$OpenPorchSF)
+AmesHouesingDataFrame$LogX3SsnPorch = log(AmesHouesingDataFrame$X3SsnPorch)
+AmesHouesingDataFrame$LogScreenPorch = log(AmesHouesingDataFrame$ScreenPorch)
+
 AmesHouesingDataFrame
 ```
 
