--- a/OverallPorchValue.Rmd
+++ b/OverallPorchValue.Rmd
@@ -70,6 +70,13 @@ boxplot(AmesHouesingDataFrameWoodDeck$LogWoodDeckSF, xlab = "Wood Deck", ylab = 
 # QQ plot
 qqnorm(AmesHouesingDataFrameWoodDeck$LogWoodDeckSF, pch = 1, frame = FALSE, main = "Q-Q Plot for Log Wood Deck Size", ylab = "Wood Deck Size in log(feet^2)")
 qqline(AmesHouesingDataFrameWoodDeck$LogWoodDeckSF, col = "steelblue", lwd = 2)
+
+AmesHouesingDataFrameWoodDeck %>% ggplot(aes(x = LogWoodDeckSF, y = LogSalePrice, color = HouseStyle)) + 
+  geom_jitter() + geom_smooth(method = "lm") +
+  labs(title="log(Wood Deck Size) vs log(sales price) in Ames Iowa")
+
+fit = lm(LogSalePrice~LogWoodDeckSF, data = AmesHouesingDataFrameWoodDeck)
+summary(fit)
 ```
 
 ```{r}
@@ -96,6 +103,13 @@ boxplot(AmesHouesingDataFrameOpenPorch$LogOpenPorchSF, xlab = "Open Porch", ylab
 # QQ plot
 qqnorm(AmesHouesingDataFrameOpenPorch$LogOpenPorchSF, pch = 1, frame = FALSE, main = "Q-Q Plot for Log Open Porch Size", ylab = "Open Porch Size in log(feet^2)")
 qqline(AmesHouesingDataFrameOpenPorch$LogOpenPorchSF, col = "steelblue", lwd = 2)
+
+AmesHouesingDataFrameOpenPorch %>% ggplot(aes(x = LogOpenPorchSF, y = LogSalePrice, color = HouseStyle)) + 
+  geom_jitter() + geom_smooth(method = "lm") +
+  labs(title="log(Open Porch Size) vs log(sales price) in Ames Iowa")
+
+fit = lm(LogSalePrice~LogOpenPorchSF, data = AmesHouesingDataFrameOpenPorch)
+summary(fit)
 ```
 
 ```{r}
@@ -122,6 +136,13 @@ boxplot(AmesHouesingDataFrameEnclosedPorch$LogEnclosedPorch, xlab = "Enclosed Po
 # QQ plot
 qqnorm(AmesHouesingDataFrameEnclosedPorch$LogEnclosedPorch, pch = 1, frame = FALSE, main = "Q-Q Plot for Log Enclosed Porch Size", ylab = "Enclosed Porch Size in log(feet^2)")
 qqline(AmesHouesingDataFrameEnclosedPorch$LogEnclosedPorch, col = "steelblue", lwd = 2)
+
+AmesHouesingDataFrameEnclosedPorch %>% ggplot(aes(x = EnclosedPorch, y = LogSalePrice, color = HouseStyle)) + 
+  geom_jitter() + geom_smooth(method = "lm") +
+  labs(title="Enclosed Porch Size (feet squared) vs log(sales price) in Ames Iowa")
+
+fit = lm(LogSalePrice~EnclosedPorch, data = AmesHouesingDataFrameEnclosedPorch)
+summary(fit)
 ```
 
 ```{r}
@@ -148,6 +169,13 @@ boxplot(AmesHouesingDataFrameX3SsnPorch$LogX3SsnPorch, xlab = "Three Season Porc
 # QQ plot
 qqnorm(AmesHouesingDataFrameX3SsnPorch$LogX3SsnPorch, pch = 1, frame = FALSE, main = "Q-Q Plot for Log Three Season Porch Size", ylab = "Three Season Porch Size in log(feet^2)")
 qqline(AmesHouesingDataFrameX3SsnPorch$LogX3SsnPorch, col = "steelblue", lwd = 2)
+
+AmesHouesingDataFrameX3SsnPorch %>% ggplot(aes(x = LogX3SsnPorch, y = LogSalePrice, color = HouseStyle)) + 
+  geom_jitter() + geom_smooth(method = "lm") +
+  labs(title="log(Three Season Porch Size) vs log(sales price) in Ames Iowa")
+
+fit = lm(LogSalePrice~LogX3SsnPorch, data = AmesHouesingDataFrameX3SsnPorch)
+summary(fit)
 ```
 
 ```{r}
@@ -174,15 +202,19 @@ boxplot(AmesHouesingDataFrameScreenPorch$LogScreenPorch, xlab = "Screen Porch", 
 # QQ plot
 qqnorm(AmesHouesingDataFrameScreenPorch$LogScreenPorch, pch = 1, frame = FALSE, main = "Q-Q Plot for Log Screen Porch Size", ylab = "Screen Porch Size in log(feet^2)")
 qqline(AmesHouesingDataFrameScreenPorch$LogScreenPorch, col = "steelblue", lwd = 2)
-```
 
-```{r}
-AmesHouesingDataFrameWoodDeck %>% ggplot(aes(x = LogWoodDeckSF, y = LogSalePrice, color = HouseStyle)) + 
+AmesHouesingDataFrameScreenPorch %>% ggplot(aes(x = LogScreenPorch, y = LogSalePrice, color = HouseStyle)) + 
   geom_jitter() + geom_smooth(method = "lm") +
-  labs(title="log(Wood Deck Size) vs log(sales price) in Ames Iowa")
+  labs(title="log(Screen Porch Size) vs log(sales price) in Ames Iowa")
+
+fit = lm(LogSalePrice~LogScreenPorch, data = AmesHouesingDataFrameScreenPorch)
+summary(fit)
 ```
 
 ```{r}
-fit = lm(LogSalePrice~LogWoodDeckSF, data = AmesHouesingDataFrameWoodDeck)
-summary(fit)
+
+```
+
+```{r}
+
 ```
