--- a/OverallPorchValue.Rmd
+++ b/OverallPorchValue.Rmd
@@ -29,19 +29,12 @@ library(dplyr)
 AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
 AmesHouesingDataFrame$LogSalePrice = log(AmesHouesingDataFrame$SalePrice)
 
-# Add 1 to all deck/porch square footage so a log transformation works (log(1) = 0)
-AmesHouesingDataFrame$WoodDeckSF = AmesHouesingDataFrame$WoodDeckSF + 1
-AmesHouesingDataFrame$OpenPorchSF = AmesHouesingDataFrame$OpenPorchSF + 1
-AmesHouesingDataFrame$EnclosedPorch = AmesHouesingDataFrame$EnclosedPorch + 1
-AmesHouesingDataFrame$X3SsnPorch = AmesHouesingDataFrame$X3SsnPorch + 1
-AmesHouesingDataFrame$ScreenPorch = AmesHouesingDataFrame$ScreenPorch + 1
-
 # Create log transformation column for the various porch square foot columns
-AmesHouesingDataFrame$LogWoodDeckSF = log(AmesHouesingDataFrame$WoodDeckSF)
-AmesHouesingDataFrame$LogOpenPorchSF = log(AmesHouesingDataFrame$OpenPorchSF)
-AmesHouesingDataFrame$LogEnclosedPorch = log(AmesHouesingDataFrame$EnclosedPorch)
-AmesHouesingDataFrame$LogX3SsnPorch = log(AmesHouesingDataFrame$X3SsnPorch)
-AmesHouesingDataFrame$LogScreenPorch = log(AmesHouesingDataFrame$ScreenPorch)
+AmesHouesingDataFrame$LogWoodDeckSF = log(AmesHouesingDataFrame$WoodDeckSF + 1)
+AmesHouesingDataFrame$LogOpenPorchSF = log(AmesHouesingDataFrame$OpenPorchSF + 1)
+AmesHouesingDataFrame$LogEnclosedPorch = log(AmesHouesingDataFrame$EnclosedPorch + 1)
+AmesHouesingDataFrame$LogX3SsnPorch = log(AmesHouesingDataFrame$X3SsnPorch + 1)
+AmesHouesingDataFrame$LogScreenPorch = log(AmesHouesingDataFrame$ScreenPorch + 1)
 
 AmesHouesingDataFrame
 ```
