--- a/OverallLocationValue.Rmd
+++ b/OverallLocationValue.Rmd
@@ -24,11 +24,8 @@ knitr::opts_chunk$set(echo = TRUE)
 AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
 AmesHouesingDataFrame$LogSalePrice = log(AmesHouesingDataFrame$SalePrice)
 
-# Add 1 to all deck/porch square footage so a log transformation works (log(1) = 0)
-AmesHouesingDataFrame$LotFrontage = AmesHouesingDataFrame$LotFrontage + 1
-
 # Create log transformation column for the various porch square foot columns
-AmesHouesingDataFrame$LogLotFrontage = log(AmesHouesingDataFrame$LotFrontage)
+AmesHouesingDataFrame$LogLotFrontage = log(AmesHouesingDataFrame$LotFrontage + 1)
 
 AmesHouesingDataFrame
 ```
