Added GarageArea log transformation

--- a/AmesHousingPrices.Rmd
+++ b/AmesHousingPrices.Rmd
@@ -51,6 +51,7 @@ AmesHouesingDataFrame$LogLotFrontage = log(AmesHouesingDataFrame$LotFrontage + 1
 
 AmesHouesingDataFrame$LogPoolArea = log(AmesHouesingDataFrame$PoolArea + 1)
 
+AmesHouesingDataFrame$LogGarageArea = log(AmesHouesingDataFrame$GarageArea + 1)
 
 AmesHouesingDataFrame
 ```
