Updated comments and formatting

--- a/OverallLandValue.Rmd
+++ b/OverallLandValue.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 # Feature engineer an overall pool value from the columns:
-#    LotArea - integer
+#    LotArea - requires log transformation
 #    LotShape
 #    LandContour
 #    LotConfig
@@ -20,9 +20,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 AmesHouesingDataFrame = data.frame(read.csv("C:/SMU MS Data Science/StatisticalFoundations6371/AmesHousePricing/train.csv"))
-AmesHouesingDataFrame$LogSalePrice = log(AmesHouesingDataFrame$SalePrice)
 
-# Create log transformation column for the various porch square foot columns
+AmesHouesingDataFrame$LogSalePrice = log(AmesHouesingDataFrame$SalePrice)
 AmesHouesingDataFrame$LogLotArea = log(AmesHouesingDataFrame$LotArea + 1)
 
 AmesHouesingDataFrame
