Added MasVnrArea log translation

--- a/AmesHousingPrices.Rmd
+++ b/AmesHousingPrices.Rmd
@@ -53,6 +53,8 @@ AmesHouesingDataFrame$LogPoolArea = log(AmesHouesingDataFrame$PoolArea + 1)
 
 AmesHouesingDataFrame$LogGarageArea = log(AmesHouesingDataFrame$GarageArea + 1)
 
+AmesHouesingDataFrame$LogMasVnrArea = log(AmesHouesingDataFrame$MasVnrArea + 1)
+
 AmesHouesingDataFrame
 ```
 
