Changes for above ground features EDA

--- a/AmesHousingPrices.Rmd
+++ b/AmesHousingPrices.Rmd
@@ -38,9 +38,13 @@ miss_var_summary(AmesHouesingDataFrame)
 ```
 
 ```{r}
+#Perform log transformations on columns that require it which was determined from the various *EDA.Rmd files and listed in Notes.txt
 AmesHouesingDataFrame$LogSalePrice = log(AmesHouesingDataFrame$SalePrice)
 
-# Create log transformation column for the various porch square foot columns
+AmesHouesingDataFrame$LogX1stFlrSF = log(AmesHouesingDataFrame$X1stFlrSF + 1)
+AmesHouesingDataFrame$LogX2ndFlrSF = log(AmesHouesingDataFrame$X2ndFlrSF + 1)
+AmesHouesingDataFrame$LogGrLivArea = log(AmesHouesingDataFrame$GrLivArea + 1)
+
 AmesHouesingDataFrame$LogWoodDeckSF = log(AmesHouesingDataFrame$WoodDeckSF + 1)
 AmesHouesingDataFrame$LogOpenPorchSF = log(AmesHouesingDataFrame$OpenPorchSF + 1)
 AmesHouesingDataFrame$LogX3SsnPorch = log(AmesHouesingDataFrame$X3SsnPorch + 1)
